--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "programming",
     "compiler"
   ],
-  "version": "0.0.1alpha",
+  "version": "0.0.1",
   "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)",
   "repository": {
     "type": "git",
